style: ensure pretty text wrapping
this prevents there being a single, rogue word on a line of its own

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     max-width: 40rem;
     padding: 1.5rem;
     margin: 0 auto;
+    text-wrap: pretty;
 }
 
 h1 {
